2004-09-19  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (AUTOCONF, XEMACS_FILES): New variables.
	(emacs): Use "cvs -f diff" in order to suppress "~/.cvsrc".  There
	might be conflicting options else.
	(xemacs): Reworked.  Same philosophy as `emacs' now.
	(configure): Apply $(AUTOCONF).  Reported by Norbert Koch
	<viteno@xemacs.org> in order to have a simple possibility applying
	autoconf under another name.

2004-09-11  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.0.45-pre).  Update merge
	version to 2.0.44.

2004-08-10  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (EMACS_EL_FILES): Remove lisp/trampver.el, it is a
	generated file.
	(emacs): Copy trampver.el.

	Version 2.0.44 released.

	* configure.ac: Bump version.

2004-07-17  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* configure.ac: Bump version (to 2.0.44-pre).  Update merge
	version to 2.0.43.

	Version 2.0.43 released.

2004-07-13  Michael Albinus  <michael.albinus@gmx.de>

	Sync with trunk.

	* .cvsignore: Add *.diff.

	* configure.ac: Bump version (to 2.0.43-pre) and set
	TRAMP_EMACS_MERGE_VERSION (to 2.0.42).
	(FTP_UPLOAD): New variable, indicating which ftp upload program to
	savannah has to be used.  Kai and Michael differ in their
	preferences ...
	(TRAMP_CLEAN_FILES): Add .*~ and *.diff.

	* README-CVS: Explaining stable releases and pre-releases in CVS.

	* Makefile.in (FTP_UPLOAD): New variable.  Value depending on
	@FTP_UPLOAD@.
	(savannah): Use it.

2004-07-13  Kai Grossjohann  <kai.grossjohann@gmx.net>

	Sync with trunk.

	* Makefile.in: Remove special-casing for building as an XEmacs
	package.  They have their own repository with their own Makefile.
	(cl-release): New target, makes "Version X released." ChangeLog
	entries.

2004-06-26  Kai Grossjohann  <kai.grossjohann@gmx.net>

	* configure.ac: Bump version (to 2.0.43-pre) and set
	TRAMP_EMACS_MERGE_VERSION (to 2.0.42).

2004-06-26  Kai Grossjohann  <kai.grossjohann@gmx.net>
