@@ -1,3 +1,13 @@
+2004-10-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (top): Apply `def-edebug-spec' only if function is
+	defined.  This is not the case for XEmacs without package
+	"edebug".
+	(tramp-set-auto-save-file-modes): Set permissions of autosaved
+	remote files to the permissions of the original file.  This is not
+	the case for Emacs < 21.3.50 and XEmacs < 21.5.  Add function to
+	`auto-save-hook'.  Reported by Thomas Prokosch <thomas@nadev.net>.
+
 2004-09-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-perl-decode): Fixed an error in Perl
