@@ -1,3 +1,11 @@
+2004-10-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* Makefile.in (savannah): Copy also index files.
+
+	* tramp.texi (Frequently Asked Questions): Comment paragraph about
+	plink link.  The URL is outdated.  Originator contacted for
+	clarification.
+	
 2004-08-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.0.44 released.
@@ -23,7 +31,7 @@
 
 2004-04-25  Michael Albinus  <Michael.Albinus@alcatel.de>
 
-	* tramp.el (Auto-save and Backup): Explain exploitation of new
+	* tramp.texi (Auto-save and Backup): Explain exploitation of new
 	variables `tramp-backup-directory-alist' and
 	`tramp-bkup-backup-directory-info'.
 
