@@ -1,3 +1,8 @@
+2004-10-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* Makefile.in (savannah): Don't call make for texi.  Only the
+	trunk should place its files there.
+
 2004-09-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* Makefile.in (AUTOCONF, XEMACS_FILES): New variables.
